# wiztek-automation-challenge

./: .gitignore  LICENSE  PROGRESS.md  README.md  bandit-report.json  pyproject.toml  requirements.txt  setup-repo.sh
.github/workflows/: ci-cd-pipeline.yml  dependency-update.yml  security-monitoring.yml
automation-platform/api-connectors/tests/: conftest.py  test_basic.py
automation-platform/scripts/: build.py  deploy.py
