[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiztek-automation-platform"
version = "1.0.0"
description = "Enterprise automation platform for WizTeK"
authors = [{name = "WizTeK Automation Team", email = "automation@wiztek.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "boto3>=1.34.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.1",
]
